--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Bienvenido al <%= title %></p>
+    <p>Donde podrás hacer tu práctica, jugar, y aprender</p>
   </body>
 </html>
