--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,7 @@
     <h1><%= title %></h1>
     <p>Bienvenido al <%= title %></p>
     <p>Donde podrás hacer tu práctica, jugar, y aprender</p>
+    <p></p>
+    <p>Ale, a empezar clicando <a href="/quizes/question">aquí</a></p>
   </body>
 </html>
