--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,2 @@
     <p><%= respuesta %></p>
-    <a href="/quizes/question">Intentalo de nuevo</a>
+    <a href="/quizes/<%= quiz.id %>">Intentalo de nuevo</a>
