--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -3,3 +3,10 @@
       <input type="text" name="respuesta" value="Dime..." />
       <input type="submit" value="Enviar"/>
     </form>
+
+<p><a href="/quizes/<%=quiz.id%>/comments/new"> <button>Añade comentario</button> </a></p>
+
+<p><strong>Comentarios:</strong></p>
+<% for(index in quiz.Comments) { %>
+  <p>- <%= quiz.Comments[index].texto %> </p>
+<% } %>
