--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"> <title>Quizjj</title>
-    <link rel='stylesheet' href='/stylesheet/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet'
             type='text/css'
             media='only screen and (min-width: 530px) and (min-device-width: 481px)'
@@ -15,7 +15,12 @@
   <body>
   <div id="page-wrap">
     <header class="main" id="h1" >
-      <h2><span>Quizjj: el juego de las preguntas</span></h2>
+      <% if(!session.user) { %>
+        <span class="right"> <a href="/login">Login</a> </span>
+      <% }else{ %>
+        <span class="right"><%=session.user.username%> <a href="/logout">Logout</a> </span>
+      <% } %>
+      <h2>Quizjj:<span>: el juego de las preguntas</span></h2>
     </header>
 
     <nav class="main" id="n1" role="navigation">
